@@ -3,6 +3,7 @@ Change log next version
 * Updated OSGi metadata
 * MockClassLoader.getResources no longer loads same file twice (thanks to Kelsey Rider for the patch)
 * Added getResourceAsStream and getResource to DeferSupportingClassLoader which defers loading to the deferring classloader.
+* Added ability to adjust the classpath when running the a test using the @UseClassPathAdjuster annotation. This is useful when integrating PowerMock with certain third-party JUnit runners (thanks to Jonas Berlin for the patch).
 
 Change log 1.5.4 (2014-01-29)
 -----------------------------
